--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>cursief</title>
+    <title>Cursief</title>
   </head>
-  <body>
+  <body style="background-color: #3c3398;">
     <noscript>
       <strong>We're sorry but cursief doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
