--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,38 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Episode 3</title>
+	<title>Cursief</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+	<header>
+		<a class="logo" href="">
+			<img src="logo__media" alt="">
+		</a>
+		<nav class="navigation">
+			<ul class="navigation__list">
+				<li class="navigation__item">
+					<a class="navigation__anchor" href=""></a>
+				</li>
+				<li class="navigation__item">
+					<a class="navigation__anchor" href=""></a>
+				</li>
+				<li class="navigation__item">
+					<a class="navigation__anchor" href=""></a>
+				</li>
+				<li class="navigation__item">
+					<a class="navigation__anchor" href=""></a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<header></header>
+		<section></section>
+		<section></section>
+		<section></section>
+		<section></section>
+	</main>
+	<footer></footer>
 </body>
 </html>
