feat(app): Add members layout.

--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cursief</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<header>
-		<a class="logo" href="">
-			<img src="logo__media" alt="">
-		</a>
-		<nav class="navigation">
-			<ul class="navigation__list">
-				<li class="navigation__item">
-					<a class="navigation__anchor" href=""></a>
-				</li>
-				<li class="navigation__item">
-					<a class="navigation__anchor" href=""></a>
-				</li>
-				<li class="navigation__item">
-					<a class="navigation__anchor" href=""></a>
-				</li>
-				<li class="navigation__item">
-					<a class="navigation__anchor" href=""></a>
-				</li>
-			</ul>
-		</nav>
-	</header>
-	<main>
-		<header></header>
-		<section></section>
-		<section></section>
-		<section></section>
-		<section></section>
-	</main>
-	<footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cursief</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <a class="logo" href="">
+        <img src="logo__media" alt="">
+      </a>
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__anchor" href=""></a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__anchor" href=""></a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__anchor" href=""></a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__anchor" href=""></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <header></header>
+      <section></section>
+      <section>
+        <ul class="members">
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar"></div>
+              <div class="member__name"></div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+            </div>
+            <div class="member__footer">
+              <a href="" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar"></div>
+              <div class="member__name"></div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia hic dolorem cupiditate assumenda sunt atque nesciunt, officia, explicabo. Veniam ipsam deserunt mollitia explicabo, delectus fugit neque tempora! Veritatis, officiis nobis.
+            </div>
+            <div class="member__footer">
+              <a href="" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar"></div>
+              <div class="member__name"></div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, ea, maiores. Labore molestiae quae voluptatum, vero sed eveniet soluta tempore sequi vel harum alias quo, qui libero. Eum, nam doloribus!
+            </div>
+            <div class="member__footer">
+              <a href="" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar"></div>
+              <div class="member__name"></div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus nesciunt delectus odit qui blanditiis incidunt enim possimus. Cupiditate corrupti hic nisi totam explicabo atque. Placeat, libero, in. Harum, tempore, veritatis!
+            </div>
+            <div class="member__footer">
+              <a href="" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar"></div>
+              <div class="member__name"></div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus eligendi ut sint quam excepturi fugit molestiae aut aliquam odit, rem, a laboriosam. Obcaecati nemo dignissimos error, quam fugit, quisquam rerum!
+            </div>
+            <div class="member__footer">
+              <a href="" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
