feat(style): Add styling for components.

--- a/src/index.html
+++ b/src/index.html
@@ -4,103 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursief</title>
+    <link rel="stylesheet" href="https://use.typekit.net/bzx4plp.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <a class="logo" href="">
+    <header class="header header--primary">
+      <a class="logo" href="#">
         <img src="logo__media" alt="">
       </a>
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__anchor" href=""></a>
+            <a class="navigation__anchor" href="#">Introduction</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__anchor" href=""></a>
+            <a class="navigation__anchor" href="#">Members</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__anchor" href=""></a>
+            <a class="navigation__anchor" href="#">Clients</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__anchor" href=""></a>
+            <a class="navigation__anchor" href="#">Contact</a>
           </li>
         </ul>
       </nav>
     </header>
     <main>
-      <header></header>
-      <section></section>
-      <section>
-        <ul class="members">
-          <li class="member">
-            <div class="member__top">
-              <div class="member__avatar"></div>
-              <div class="member__name"></div>
-              <div class="member__title"></div>
-            </div>
-            <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
-            </div>
-            <div class="member__footer">
-              <a href="" class="member__anchor">Visit my portfolio</a>
-            </div>
-          </li>
-          <li class="member">
-            <div class="member__top">
-              <div class="member__avatar"></div>
-              <div class="member__name"></div>
-              <div class="member__title"></div>
-            </div>
-            <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia hic dolorem cupiditate assumenda sunt atque nesciunt, officia, explicabo. Veniam ipsam deserunt mollitia explicabo, delectus fugit neque tempora! Veritatis, officiis nobis.
-            </div>
-            <div class="member__footer">
-              <a href="" class="member__anchor">Visit my portfolio</a>
-            </div>
-          </li>
-          <li class="member">
-            <div class="member__top">
-              <div class="member__avatar"></div>
-              <div class="member__name"></div>
-              <div class="member__title"></div>
-            </div>
-            <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, ea, maiores. Labore molestiae quae voluptatum, vero sed eveniet soluta tempore sequi vel harum alias quo, qui libero. Eum, nam doloribus!
-            </div>
-            <div class="member__footer">
-              <a href="" class="member__anchor">Visit my portfolio</a>
-            </div>
-          </li>
-          <li class="member">
-            <div class="member__top">
-              <div class="member__avatar"></div>
-              <div class="member__name"></div>
-              <div class="member__title"></div>
-            </div>
-            <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus nesciunt delectus odit qui blanditiis incidunt enim possimus. Cupiditate corrupti hic nisi totam explicabo atque. Placeat, libero, in. Harum, tempore, veritatis!
-            </div>
-            <div class="member__footer">
-              <a href="" class="member__anchor">Visit my portfolio</a>
-            </div>
-          </li>
-          <li class="member">
-            <div class="member__top">
-              <div class="member__avatar"></div>
-              <div class="member__name"></div>
-              <div class="member__title"></div>
-            </div>
-            <div class="member__description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus eligendi ut sint quam excepturi fugit molestiae aut aliquam odit, rem, a laboriosam. Obcaecati nemo dignissimos error, quam fugit, quisquam rerum!
-            </div>
-            <div class="member__footer">
-              <a href="" class="member__anchor">Visit my portfolio</a>
-            </div>
-          </li>
-        </ul>
+      <section class="banner">
+
       </section>
-      <section></section>
+      <section class="section section--left">
+        <div class="section__container">
+          <div>
+            <h1>We are the web generation</h1>
+            <p class="section__description">Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
+            <a class="readmore" href="#">Read more</a>
+          </div>
+          <div></div>
+        </div>
+      </section>
+      <section class="section section--center">
+        <div class="section__container section__container--wide">
+          <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
+          <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
+          <ul class="members">
+            <li class="member">
+              <div class="member__top">
+                <div class="member__avatar"></div>
+                <div class="member__name">Member<br>name</div>
+                <div class="member__title"></div>
+              </div>
+              <div class="member__description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              </div>
+              <div class="member__footer">
+                <a href="#" class="member__anchor">Visit my portfolio</a>
+              </div>
+            </li>
+            <li class="member">
+              <div class="member__top">
+                <div class="member__avatar"></div>
+                <div class="member__name">Member<br>name</div>
+                <div class="member__title"></div>
+              </div>
+              <div class="member__description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              </div>
+              <div class="member__footer">
+                <a href="#" class="member__anchor">Visit my portfolio</a>
+              </div>
+            </li>
+            <li class="member">
+              <div class="member__top">
+                <div class="member__avatar"></div>
+                <div class="member__name">Member<br>name</div>
+                <div class="member__title"></div>
+              </div>
+              <div class="member__description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              </div>
+              <div class="member__footer">
+                <a href="#" class="member__anchor">Visit my portfolio</a>
+              </div>
+            </li>
+            <li class="member">
+              <div class="member__top">
+                <div class="member__avatar"></div>
+                <div class="member__name">Member<br>name</div>
+                <div class="member__title"></div>
+              </div>
+              <div class="member__description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              </div>
+              <div class="member__footer">
+                <a href="#" class="member__anchor">Visit my portfolio</a>
+              </div>
+            </li>
+            <li class="member">
+              <div class="member__top">
+                <div class="member__avatar"></div>
+                <div class="member__name">Member<br>name</div>
+                <div class="member__title"></div>
+              </div>
+              <div class="member__description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+              </div>
+              <div class="member__footer">
+                <a href="#" class="member__anchor">Visit my portfolio</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section section--right">
+        <div class="section__container">
+          <div></div>
+          <div>
+            <h1>Clients & Projects</h1>
+            <p>Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
+            <a class="readmore" href="#">View some cases</a>
+          </div>
+        </div>
+      </section>
       <section></section>
     </main>
     <footer></footer>
