feat(member): Add avatars and fix rendering issue.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,9 @@
           <ul class="members">
             <li class="member">
               <div class="member__top">
-                <div class="member__avatar"></div>
+                <div class="member__avatar">
+                  <img src="images/avatar-gideon.png" alt="">
+                </div>
                 <div class="member__name">Member<br>name</div>
                 <div class="member__title"></div>
               </div>
@@ -63,7 +65,9 @@
             </li>
             <li class="member">
               <div class="member__top">
-                <div class="member__avatar"></div>
+                <div class="member__avatar">
+                  <img src="images/avatar-murtada.png" alt="">
+                </div>
                 <div class="member__name">Member<br>name</div>
                 <div class="member__title"></div>
               </div>
@@ -76,7 +80,9 @@
             </li>
             <li class="member">
               <div class="member__top">
-                <div class="member__avatar"></div>
+                <div class="member__avatar">
+                  <img src="images/avatar-gideon.png" alt="">
+                </div>
                 <div class="member__name">Member<br>name</div>
                 <div class="member__title"></div>
               </div>
@@ -89,7 +95,9 @@
             </li>
             <li class="member">
               <div class="member__top">
-                <div class="member__avatar"></div>
+                <div class="member__avatar">
+                  <img src="images/avatar-murtada.png" alt="">
+                </div>
                 <div class="member__name">Member<br>name</div>
                 <div class="member__title"></div>
               </div>
@@ -102,7 +110,9 @@
             </li>
             <li class="member">
               <div class="member__top">
-                <div class="member__avatar"></div>
+                <div class="member__avatar">
+                  <img src="images/avatar-gideon.png" alt="">
+                </div>
                 <div class="member__name">Member<br>name</div>
                 <div class="member__title"></div>
               </div>
