--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,10 @@
       </section>
       <section></section>
     </main>
+    <div class="cart">
+      <span class="cart__label">Team</span>
+      <div class="cart__amount"></div>
+    </div>
     <footer></footer>
     <script src="app.js"></script>
   </body>
