feat(home): Add some new styling and components.

--- a/src/index.html
+++ b/src/index.html
@@ -9,126 +9,172 @@
   </head>
   <body>
     <header class="header header--primary">
-      <a class="logo" href="#">
-        <img src="logo__media" alt="">
-      </a>
-      <nav class="navigation">
-        <ul class="navigation__list">
-          <li class="navigation__item">
-            <a class="navigation__anchor" href="#">Introduction</a>
+        <div class="header__container">
+        <a class="header__logo" href="#">
+          <img src="images/logo.svg" alt="">
+        </a>
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a class="navigation__anchor" href="#">Introduction</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__anchor" href="#">Members</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__anchor" href="#">Clients</a>
+            </li>
+            <li class="navigation__item">
+              <a class="navigation__anchor" href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="social">
+          <li class="social__item">
+            <a class="social__anchor" href="#">Twitter</a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__anchor" href="#">Members</a>
+          <li class="social__item">
+            <a class="social__anchor" href="#">Linkedin</a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__anchor" href="#">Clients</a>
+          <li class="social__item">
+            <a class="social__anchor" href="#">Github</a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__anchor" href="#">Contact</a>
+          <li class="social__item">
+            <a class="social__anchor" href="#">Dribble</a>
           </li>
         </ul>
-      </nav>
+        <a class="button button--primary" href="#">Build your team</a>
+      </div>
     </header>
     <main>
       <section class="banner">
-
+        <div class="banner__container">
+          <h1 class="banner__heading">We help you make<br>the best digital products.</h1>
+          <div class="banner__content">
+            <p>We design, build and launch products for startups, established companies and ourselves. We help businesses grow through effective design and strategy. We live and breath the web. Let’s create some great things together!</p>
+            <a class="button button--secondary" href="#">Contact us</a>
+          </div>
+        </div>
       </section>
-      <section class="section section--left">
+      <section class="section section--left section--intro">
         <div class="section__container">
-          <div>
+          <div class="section__text">
             <h1>We are the web generation</h1>
             <p class="section__description">Cursief is a pool of web-veterans with years of experience creating websites, webshops and webapps. Being bundled under one name gives us a lot of flexibility taking on small and large projects, our members scale depending on what you need for your company and project.</p>
             <a class="readmore" href="#">Read more</a>
           </div>
-          <div></div>
+          <div class="section__media">
+            <img src="images/introduction.png" alt="">
+          </div>
         </div>
       </section>
       <section class="section section--center">
         <div class="section__container section__container--wide">
           <h1>Choose your own <span class="strikethrough">adventure</span> team</h1>
           <p class="section__description">Not every project needs an agency with project managers, marketeers and a big building. Pay only for who/what you really need!</p>
-          <ul class="members">
-            <li class="member">
-              <div class="member__top">
-                <div class="member__avatar">
-                  <img src="images/avatar-gideon.png" alt="">
-                </div>
-                <div class="member__name">Member<br>name</div>
-                <div class="member__title"></div>
-              </div>
-              <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
-              </div>
-              <div class="member__footer">
-                <a href="#" class="member__anchor">Visit my portfolio</a>
-              </div>
-            </li>
-            <li class="member">
-              <div class="member__top">
-                <div class="member__avatar">
-                  <img src="images/avatar-murtada.png" alt="">
-                </div>
-                <div class="member__name">Member<br>name</div>
-                <div class="member__title"></div>
-              </div>
-              <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
-              </div>
-              <div class="member__footer">
-                <a href="#" class="member__anchor">Visit my portfolio</a>
-              </div>
-            </li>
-            <li class="member">
-              <div class="member__top">
-                <div class="member__avatar">
-                  <img src="images/avatar-gideon.png" alt="">
-                </div>
-                <div class="member__name">Member<br>name</div>
-                <div class="member__title"></div>
-              </div>
-              <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
-              </div>
-              <div class="member__footer">
-                <a href="#" class="member__anchor">Visit my portfolio</a>
-              </div>
-            </li>
-            <li class="member">
-              <div class="member__top">
-                <div class="member__avatar">
-                  <img src="images/avatar-murtada.png" alt="">
-                </div>
-                <div class="member__name">Member<br>name</div>
-                <div class="member__title"></div>
-              </div>
-              <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
-              </div>
-              <div class="member__footer">
-                <a href="#" class="member__anchor">Visit my portfolio</a>
-              </div>
-            </li>
-            <li class="member">
-              <div class="member__top">
-                <div class="member__avatar">
-                  <img src="images/avatar-gideon.png" alt="">
-                </div>
-                <div class="member__name">Member<br>name</div>
-                <div class="member__title"></div>
-              </div>
-              <div class="member__description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
-              </div>
-              <div class="member__footer">
-                <a href="#" class="member__anchor">Visit my portfolio</a>
-              </div>
-            </li>
-          </ul>
         </div>
+        <ul class="members">
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar">
+                <img src="images/avatar-gideon.png" alt="">
+              </div>
+              <div class="member__name">Member<br>name</div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+            </div>
+            <div class="member__footer">
+              <a href="#" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar">
+                <img src="images/avatar-murtada.png" alt="">
+              </div>
+              <div class="member__name">Member<br>name</div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+            </div>
+            <div class="member__footer">
+              <a href="#" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar">
+                <img src="images/avatar-gideon.png" alt="">
+              </div>
+              <div class="member__name">Member<br>name</div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+            </div>
+            <div class="member__footer">
+              <a href="#" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar">
+                <img src="images/avatar-murtada.png" alt="">
+              </div>
+              <div class="member__name">Member<br>name</div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+            </div>
+            <div class="member__footer">
+              <a href="#" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+          <li class="member">
+            <div class="member__top">
+              <div class="member__avatar">
+                <img src="images/avatar-gideon.png" alt="">
+              </div>
+              <div class="member__name">Member<br>name</div>
+              <div class="member__title"></div>
+            </div>
+            <div class="member__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam nisi rerum sapiente error exercitationem fugiat, cumque harum quibusdam sed a ipsam, officia adipisci reprehenderit magni dolor voluptatum. Deserunt, nisi, quibusdam.
+            </div>
+            <div class="member__footer">
+              <a href="#" class="member__anchor">Visit my portfolio</a>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="section section--right">
         <div class="section__container">
-          <div></div>
+          <div>
+            <ul class="clients">
+              <li class="client">
+                <img src="images/client-redkiwi.png" alt="">
+              </li>
+              <li class="client">
+                <img src="images/client-ggz.png" alt="">
+              </li>
+              <li class="client">
+                <img src="images/client-dok.png" alt="">
+              </li>
+              <li class="client">
+                <img src="images/client-woonz.png" alt="">
+              </li>
+              <li class="client">
+                <img src="images/client-keylane.png" alt="">
+              </li>
+              <li class="client">
+                <img src="images/client-ematters.png" alt="">
+              </li>
+            </ul>
+          </div>
           <div>
             <h1>Clients & Projects</h1>
             <p>Members of Cursief have worked for a wide range of clients in a bunch of different sectors. Big, small, start-up, enterprise, everything is possible.</p>
