--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
               </div>
-              <div class="member__name">Member<br>name</div>
+              <div class="member__name">Gideon Heilbron 1</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -94,7 +94,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
               </div>
-              <div class="member__name">Member<br>name</div>
+              <div class="member__name">Murtada al Mousawy 1</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -109,7 +109,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
               </div>
-              <div class="member__name">Member<br>name</div>
+              <div class="member__name">Gideon Heilbron 2</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -124,7 +124,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
               </div>
-              <div class="member__name">Member<br>name</div>
+              <div class="member__name">Murtada al Mousawy 2</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -139,7 +139,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
               </div>
-              <div class="member__name">Member<br>name</div>
+              <div class="member__name">Gideon Heilbron 3</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -184,7 +184,31 @@
       </section>
       <section></section>
     </main>
+
+    <div class="cart">
+      <span class="cart__label">Team</span>
+      <div class="cart__amount"></div>
+      <div class="cart__content-holder">
+        <div class="cart-content"></div>
+      </div>
+    </div>
     <footer></footer>
+
+    <template id="cart-item">
+      <div class="cart-item">
+        <div class="cart-item__image"></div>
+        <div class="cart-item__title"></div>
+        <div class="cart-item__remove"></div>
+      </div>
+    </template>
+
+    <template id="cart-item-placeholder">
+      <div class="cart-item cart-item--placeholder">
+        <div class="cart-item__title">Add members to build your team!</div>
+      </div>
+    </template>
+
     <script src="app.js"></script>
+
   </body>
 </html>
