--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
               </div>
-              <div class="member__name">Gideon Heilbron 1</div>
+              <div class="member__name">Gideon <br>Heilbron 1</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -94,7 +94,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
               </div>
-              <div class="member__name">Murtada al Mousawy 1</div>
+              <div class="member__name">Murtada <br>al Mousawy 1</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -109,7 +109,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
               </div>
-              <div class="member__name">Gideon Heilbron 2</div>
+              <div class="member__name">Gideon <br>Heilbron 2</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -124,7 +124,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-murtada.png" alt="">
               </div>
-              <div class="member__name">Murtada al Mousawy 2</div>
+              <div class="member__name">Murtada <br>al Mousawy 2</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -139,7 +139,7 @@
               <div class="member__avatar">
                 <img src="images/avatar-gideon.png" alt="">
               </div>
-              <div class="member__name">Gideon Heilbron 3</div>
+              <div class="member__name">Gideon <br>Heilbron 3</div>
               <div class="member__title"></div>
             </div>
             <div class="member__description">
@@ -182,17 +182,23 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <section>
+
+      </section>
+      <div class="cart">
+        <span class="cart__label">Team</span>
+        <div class="cart__amount"></div>
+        <div class="cart__content-holder">
+          <div class="cart-content"></div>
+        </div>
+      </div>
     </main>
 
-    <div class="cart">
-      <span class="cart__label">Team</span>
-      <div class="cart__amount"></div>
-      <div class="cart__content-holder">
-        <div class="cart-content"></div>
+    <footer class="footer footer--primary">
+      <div class="footer__container">
+        <img src="images/logo.svg" alt="">
       </div>
-    </div>
-    <footer></footer>
+    </footer>
 
     <template id="cart-item">
       <div class="cart-item">
@@ -209,6 +215,5 @@
     </template>
 
     <script src="app.js"></script>
-
   </body>
 </html>
