feat(header): Add social icons. feat(footer): Add social icons.

--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,25 @@
           </ul>
         </nav>
         <ul class="social">
-          <li class="social__item">
-            <a class="social__anchor" href="#">Twitter</a>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-twitter.svg" alt="">
+            </a>
           </li>
-          <li class="social__item">
-            <a class="social__anchor" href="#">Linkedin</a>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-linkedin.svg" alt="">
+            </a>
           </li>
-          <li class="social__item">
-            <a class="social__anchor" href="#">Github</a>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-github.svg" alt="">
+            </a>
           </li>
-          <li class="social__item">
-            <a class="social__anchor" href="#">Dribble</a>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-dribbble.svg" alt="">
+            </a>
           </li>
         </ul>
         <a class="button button--primary" href="#">Build your team</a>
@@ -196,7 +204,30 @@
 
     <footer class="footer footer--primary">
       <div class="footer__container">
-        <img src="images/logo.svg" alt="">
+        <img class="footer__logo" src="images/logo.svg" alt="">
+        <span>© 2019 Cursief. All rights reserved.</span>
+        <ul class="social social--footer">
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-twitter.svg" alt="">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-linkedin.svg" alt="">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-github.svg" alt="">
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="social-item__anchor" href="#">
+              <img src="images/icon-dribbble.svg" alt="">
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
 
